re PR tree-optimization/50363 (internal compiler error: verify_gimple failed)

2011-09-27  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/50363
	* tree-ssa-pre.c (create_expression_by_pieces): Handle
	pointer conversions in POINTER_PLUS_EXPRs properly.

	* gcc.dg/torture/pr50363.c: New testcase.

From-SVN: r179247